adding aditing for some entities and fixing all apis